# sudoku-rs

./: Cargo.toml  Makefile  README.md
benches/: benchmark.rs
src/: bin.rs  lib.rs  main.rs
