[package]
name = "sudoku-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rand = "0.8.5"

[lib]
name = "sudoku_rs"
path = "src/lib.rs"

[features]
default =["error_cache"]
error_cache = []

[[bin]]
name = "sudoku_solver"
path = "src/bin.rs"